更新 model基础controller方法
